      circular responses.
      \item Allow predictions of \code{t2} smoothing
      terms for new data.
      \item Feature vectors as arguments for the addition 
      argument \code{trunc} in order to model varying
      truncation points.
    }
  }
  \subsection{OTHER CHANGES}{
    \itemize{
      \item Remove the \code{cauchy} family
      after several months of deprecation.
      \item Compute the linear predictor in the model
      block of the Stan program instead of in the
      transformed parameters block. This avoids saving
      samples of unnecessary parameters to disk.
      Thanks goes to Rick Arrano for pointing me 
      to this issue.
      \item Colour points in \code{marginal_effects} plots if 
      sensible.
      \item Set the default of the \code{robust} argument 
      to \code{TRUE} in \code{marginal_effects.brmsfit}.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{ 
      \item Fix a bug that could occur when predicting             
      factorial response variables for new data.
      Only affects categorical and ordinal models.
      \item Fix a bug that could lead to duplicated  
      variable names in the Stan code when sampling 
      from priors in non-linear models thanks to Tom Wallis.
      \item Fix problems when trying to pointwise 
      evaluate non-linear formulae in 
      \code{logLik.brmsfit} thanks to Tom Wallis.
      \item Fix problems that occasionally occured when
      handling \pkg{dplyr} datasets thanks to the
      GitHub user Atan1988.
    }
  }
}

\section{CHANGES IN VERSION 0.10.0}{
  \subsection{NEW FEATURES}{
    \itemize{ 
      \item Add support for generalized additive mixed models
      (GAMMs). Smoothing terms can be specified using
      the \code{s} and \code{t2} functions in the model formula. 
      \item Introduce \code{as.data.frame} and \code{as.matrix}
      methods for \code{brmsfit} objects.
    }
  }
  \subsection{OTHER CHANGES}{
    \itemize{